<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/MatchParent"
    android:background="@color/white_color">

    <ImageView
        android:id="@+id/cross"
        android:layout_width="@dimen/twenty_five_dp"
        android:layout_height="@dimen/twenty_five_dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/ten_dp"
        android:src="@mipmap/cross" />

    <RelativeLayout
        style="@style/WrapContent"
        android:layout_centerInParent="true"
        android:layout_marginEnd="@dimen/thirtieth_dp"
        android:layout_marginStart="@dimen/thirtieth_dp">

        <ImageView
            android:id="@+id/srphoneicon"
            android:layout_width="@dimen/twenty_five_dp"
            android:layout_height="@dimen/twenty_five_dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_margin="@dimen/ten_dp"
            android:src="@mipmap/email2" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/srphoneicon"
            android:layout_alignTop="@+id/srphoneicon"
            android:layout_toRightOf="@+id/srphoneicon"
            android:background="@null"
            android:hint="@string/hint_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:singleLine="true"
            android:textSize="@dimen/fourty_sp" />

        <View
            android:id="@+id/line3"
            style="@style/MatchParent.Line"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/srphoneicon"
            android:background="@color/view_line_color" />

        <ImageView
            android:id="@+id/srcodeicon"
            android:layout_width="@dimen/twenty_five_dp"
            android:layout_height="@dimen/twenty_five_dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/line3"
            android:layout_margin="@dimen/ten_dp"
            android:src="@mipmap/identifycode" />

        <EditText
            android:id="@+id/et_code"
            style="@style/MatchParent"
            android:layout_alignBottom="@+id/srcodeicon"
            android:layout_alignTop="@+id/srcodeicon"
            android:layout_toLeftOf="@+id/btn_getcode"
            android:layout_toRightOf="@+id/srcodeicon"
            android:inputType="number"
            android:background="@null"
            android:hint="@string/hint_input_code"
            android:singleLine="true"
            android:textSize="@dimen/fourty_sp" />

        <com.android.lala.customview.TimeButton
            android:id="@+id/btn_getcode"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/twenty_five_dp"
            android:layout_alignBottom="@+id/srcodeicon"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/srcodeicon"
            android:background="@drawable/getcode_shape"
            android:enabled="false"
            android:paddingLeft="@dimen/ten_dp"
            android:paddingRight="@dimen/ten_dp"
            android:text="@string/str_getcode"
            android:textColor="@color/white_color"
            android:textSize="@dimen/ten_sp" />


        <View
            android:id="@+id/line4"
            style="@style/MatchParent.Line"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/srcodeicon"
            android:background="@color/view_line_color" />

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/line4"
            android:layout_marginEnd="@dimen/ten_dp"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:background="@drawable/getcode_shape"
            android:text="@string/next_step"
            android:textColor="@color/white_color"
            android:textSize="@dimen/ten_sp" />

        <Button
            android:id="@+id/btn_relogin"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/btn_next"
            android:layout_marginEnd="@dimen/ten_dp"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:background="@drawable/btn_comm_next"
            android:text="@string/str_gologin"
            android:textColor="@color/nomarl_text_color"
            android:textSize="@dimen/ten_sp" />
    </RelativeLayout>
</RelativeLayout>

