<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/tolbar_color">
        <ImageView
            android:id="@+id/back"
            android:padding="5dp"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_left_white"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="修改密码"
            android:textSize="19sp"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/wancheng"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/classf"
            android:textSize="12sp"
            android:background="@drawable/guanzhu_shape"
            android:layout_marginRight="20dp"
            android:padding="5dp"
            android:text="完成"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/nomarl_title_color"
            android:text="旧密码"/>
        <EditText
            android:id="@+id/updatepwd_old"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:textSize="13dp"
            android:hint="@string/hint_old_pwd"
            android:inputType="textPassword"
            android:layout_marginRight="30dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:gravity="center"
            android:textColor="@color/nomarl_title_color"
            android:text="新密码"/>
        <EditText
            android:id="@+id/updatepwd_new"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:hint="@string/hint_new_pwd"
            android:inputType="textPassword"
            android:textSize="13dp"
            android:layout_marginRight="30dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView

            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/nomarl_title_color"
            android:text="确认密码"/>
        <EditText
            android:id="@+id/updatepwd_confirm"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="match_parent"
            android:hint="@string/hint_align_pwd"
            android:inputType="textPassword"
            android:textSize="13dp"
            android:layout_marginRight="30dp"/>
    </LinearLayout>

</LinearLayout>